force-app/main/default/objects/Beat__c/fields/Beat_Grade__c.field-meta.xml
<CustomField>
    <fullName>Beat_Grade__c</fullName>
    <label>Beat Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>(grade values)</fullName><default>false</default><label>(grade values)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>