force-app/main/default/objects/Beat__c/fields/Position_Code__c.field-meta.xml
<CustomField>
    <fullName>Position_Code__c</fullName>
    <label>Position Code</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Position__c</referenceTo>
    <relationshipName>Beat_Position_Code</relationshipName>
    <type>Lookup</type>
</CustomField>