force-app/main/default/objects/Beat__c/fields/Tagged_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Tagged_Distributor__c</fullName>
    <label>Tagged Distributor (DB)</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipName>Beat_Tagged_Distributor</relationshipName>
    <type>Lookup</type>
</CustomField>