force-app/main/default/objects/Beat__c/fields/Tagged_Sub_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Tagged_Sub_Distributor__c</fullName>
    <label>Tagged Sub-Distributor (SD)</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipName>Beat_Tagged_Sub_Distributor</relationshipName>
    <type>Lookup</type>
</CustomField>