force-app/main/default/objects/Beat__c/validationRules/Max_70_Outlets.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_70_Outlets</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Outlets__c > 70</errorConditionFormula>
    <errorMessage>A beat can have a maximum of 70 outlets (BRD 7.1).</errorMessage>
</ValidationRule>